--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -1,22 +1,49 @@
 # src/AppBundle/Resources/translations/messages.ua.yml
-message_standard:
-  Вы используете браузер %browser% для операционной системы %osFamily%. Версия вашего браузера - %clientVersionShort% (%clientVersion%)
-message_standard_extended:
-  Вы используете браузер %browser% от компании %vendor% для операционной системы %osFamily%. Версия вашего браузера - %clientVersionShort% (%clientVersion%)
-message_outdated:
-  Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)! Текущая же версия вполне может испортить впечатление от просмотра и использования современных сайтов в сети Интернет
-message_uptodate:
+message_standard: >
+  Вы используете браузер %browser% для операционной системы %osFamily%.
+  Версия вашего браузера - %clientVersionShort% (%clientVersion%)
+message_standard_extended: >
+  Вы используете браузер %browser% от компании %vendor% для операционной системы %osFamily%.
+  Версия вашего браузера - %clientVersionShort% (%clientVersion%)
+message_outdated: >
+  Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
+  Текущая же версия вполне может испортить впечатление от просмотра и использования современных сайтов в сети Интернет
+message_uptodate: >
   На сегодняшний день это новейшая версия браузера. Отлично!
-message_explorer:
-  Ох... Internet Explorer, хотя по ряду причин и является популярным браузером, накладывает на разработчиков сайтов множество ограничений и очень часто не позволяет пользователям в полной мере оценить их работу. Это не правило, но мы в некоторых случаях мы рекомендуем установить другой браузер, который гораздо лучше справится с поставленными задачами и сделает вашу работу и развлечения в сети более комфортными.
+message_explorer: >
+  Ох... Internet Explorer, хотя по ряду причин и является популярным браузером, накладывает на разработчиков сайтов
+  множество ограничений и очень часто не позволяет пользователям в полной мере оценить их работу.
+  Это не правило, но мы в некоторых случаях мы рекомендуем установить другой браузер, который гораздо лучше справится
+  с поставленными задачами и сделает вашу работу и развлечения в сети более комфортными.
 
-user_error_is_bot:
+tooltip_wrong_browser: >
+  Возможно, определитель системы ошибся, и вы используете другой браузер. В этом случае мы будем весьма благодарны,
+  если вы оставите отзыв касательно данного вопроса.
+tooltip_uninstall_browser: >
+  Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
+  и данные о работе (большинство современных браузеров предлагают такую опцию)
+
+browser_market_share: >
+  Предпочитают %marketShare%% пользователей сети
+browser_stable_release: >
+  Текущая версия
+browser_button_download: >
+  Скачать
+browser_button_official_page: >
+  на сайте разработчика
+browser_os: >
+  Для операционных систем
+
+user_error_is_bot: >
   Жаль, но определить ваш браузер не удалось, так как скорее всего вы - бот
-user_error_is_mobile:
+user_error_is_mobile: >
   Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства
-user_error_not_browser:
+user_error_not_browser: >
   Жаль, но определить ваш браузер не удалось, так как скорее всего ваш клиент - не браузер
-user_error_unsupported_browser:
-  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать о вашем
-user_error_unsupported_os:
-  Браузер, который вы используете, официально не поддерживается вашей операционной системой! Рекомендуем скачать и установить другой
+
+user_warning_unsupported_browser: >
+  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать о последней версии вашего
+  или предложить обновление
+user_warning_unsupported_os: >
+  Браузер, который вы используете, официально не поддерживается вашей операционной системой!
+  Рекомендуем скачать и установить другой браузер
