--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -16,6 +16,56 @@ message_explorer: >
   Это не правило, но мы в некоторых случаях мы рекомендуем установить другой браузер, который гораздо лучше справится
   с поставленными задачами и сделает вашу работу и развлечения в сети более комфортными.
 
+tooltip_wrong_browser: >
+  Возможно, определитель системы ошибся, и вы используете другой браузер. В этом случае мы будем весьма благодарны,
+  если вы оставите отзыв касательно данного вопроса.
+tooltip_uninstall_browser: >
+  Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
+  и данные о работе (большинство современных браузеров предлагают такую опцию)
+
+browser_market_share: >
+  Предпочитают %marketShare%% пользователей сети
+browser_stable_release: >
+  Текущая версия
+browser_button_download: >
+  Скачать
+browser_button_official_page: >
+  на сайте разработчика
+browser_os: >
+  Для операционных систем
+
+content_idea_title: >
+  Зачем это нужно?
+content_idea_text: >
+  Несмотря на то, что браузеры научились обновлять себя не отвлекая пользователя от его повседневных дел,
+  многие до сих пор используют устаревшие версии подобных программ. Причин, по которым с вами может произойти подобное,
+  множество, но следствие одно: сайты и системы в сети Интернет для вас будут работать и выглядеть не так,
+  как это было задумано их создателями.
+  Начиная от вопросов безопасности и некорректного внешнего вида и заканчивая удобством использования и
+  производительностью - всегда стоит использовать последнии версии браузеров.
+  На этой странице вы можете проверить вашу и скачать последнюю версию любого из наиболее популярных
+  в данный момент браузеров!
+
+content_api_title: >
+  Вы можете использовать это для своих сайтов!
+content_api_text: >
+  Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
+  всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
+  проекты такими, какими они должны быть - присоединяйтесь!
+content_api_guide_title: >
+  Вы можете получить данные в удобном для себя формате!
+content_api_guide_html_title: >
+  Готовый HTML-виджет
+content_api_guide_html_text: >
+  С помощью предоставляемого JavaScript вы получите уже готовый, нейтрально стилизованный виджет для встраивания
+  на любую страницу. В случае, если версия браузера вашего пользователя устарела, виджет покажет себя и предложит
+  обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться от обновления, и сообщение больше
+  не будет отображаться повторно.
+content_api_guide_json_title: >
+  Необходимые данные в формате JSON
+content_api_guide_json_text: >
+  Вы можете самостоятельно стилизовать данные, полученные в формате JSON.
+
 user_error_is_bot: >
   Жаль, но определить ваш браузер не удалось, так как скорее всего вы - бот
 user_error_is_mobile: >
@@ -24,7 +74,8 @@ user_error_not_browser: >
   Жаль, но определить ваш браузер не удалось, так как скорее всего ваш клиент - не браузер
 
 user_warning_unsupported_browser: >
-  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать о вашем
+  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать о последней версии вашего
+  или предложить обновление
 user_warning_unsupported_os: >
   Браузер, который вы используете, официально не поддерживается вашей операционной системой!
-  Рекомендуем скачать и установить другой
+  Рекомендуем скачать и установить другой браузер
