--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -34,6 +34,38 @@ browser_button_official_page: >
 browser_os: >
   Для операционных систем
 
+content_idea_title: >
+  Зачем это нужно?
+content_idea_text: >
+  Несмотря на то, что браузеры научились обновлять себя не отвлекая пользователя от его повседневных дел,
+  многие до сих пор используют устаревшие версии подобных программ. Причин, по которым с вами может произойти подобное,
+  множество, но следствие одно: сайты и системы в сети Интернет для вас будут работать и выглядеть не так,
+  как это было задумано их создателями.
+  Начиная от вопросов безопасности и некорректного внешнего вида и заканчивая удобством использования и
+  производительностью - всегда стоит использовать последнии версии браузеров.
+  На этой странице вы можете проверить вашу и скачать последнюю версию любого из наиболее популярных
+  в данный момент браузеров!
+
+content_api_title: >
+  Вы можете использовать это для своих сайтов!
+content_api_text: >
+  Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
+  всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
+  проекты такими, какими они должны быть - присоединяйтесь!
+content_api_guide_title: >
+  Вы можете получить данные в удобном для себя формате!
+content_api_guide_html_title: >
+  Готовый HTML-виджет
+content_api_guide_html_text: >
+  С помощью предоставляемого JavaScript вы получите уже готовый, нейтрально стилизованный виджет для встраивания
+  на любую страницу. В случае, если версия браузера вашего пользователя устарела, виджет покажет себя и предложит
+  обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться от обновления, и сообщение больше
+  не будет отображаться повторно.
+content_api_guide_json_title: >
+  Необходимые данные в формате JSON
+content_api_guide_json_text: >
+  Вы можете самостоятельно стилизовать данные, полученные в формате JSON.
+
 user_error_is_bot: >
   Жаль, но определить ваш браузер не удалось, так как скорее всего вы - бот
 user_error_is_mobile: >
