--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -1,81 +1,98 @@
 # src/AppBundle/Resources/translations/messages.ua.yml
-message_standard: >
-  Вы используете браузер %browser% для операционной системы %osFamily%.
-  Версия вашего браузера - %clientVersionShort% (%clientVersion%)
-message_standard_extended: >
-  Вы используете браузер %browser% от компании %vendor% для операционной системы %osFamily%.
-  Версия вашего браузера - %clientVersionShort% (%clientVersion%)
-message_outdated: >
-  Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
-  Текущая же версия вполне может испортить впечатление от просмотра и использования современных сайтов в сети Интернет
-message_uptodate: >
-  На сегодняшний день это новейшая версия браузера. Отлично!
-message_explorer: >
-  Ох... Internet Explorer, хотя по ряду причин и является популярным браузером, накладывает на разработчиков сайтов
-  множество ограничений и очень часто не позволяет пользователям в полной мере оценить их работу.
-  Это не правило, но мы в некоторых случаях мы рекомендуем установить другой браузер, который гораздо лучше справится
-  с поставленными задачами и сделает вашу работу и развлечения в сети более комфортными.
+message:
+  standard: >
+    Вы используете браузер %browser% для операционной системы %osFamily%.
+    Версия вашего браузера - %clientVersionShort% (%clientVersion%)
+  standard_extended: >
+    Вы используете браузер %browser% от компании %vendor% для операционной системы %osFamily%.
+    Версия вашего браузера - %clientVersionShort% (%clientVersion%)
+  outdated: >
+    Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
+    Текущая же версия вполне может испортить впечатление от просмотра и использования современных сайтов в сети Интернет
+  uptodate: >
+    На сегодняшний день это новейшая версия браузера. Отлично!
+  explorer: >
+    Ох... Internet Explorer, хотя и является популярным браузером по ряду причин, накладывает на разработчиков сайтов
+    ряд ограничений и очень часто не позволяет пользователям в полной мере оценить их работу.
+    Этого можно и не делать, но в некоторых случаях мы рекомендуем установить другой браузер, который, скорее всего, лучше
+    справится с поставленными задачами и сделает вашу работу и развлечения в сети более комфортными.
 
-tooltip_wrong_browser: >
-  Возможно, определитель системы ошибся, и вы используете другой браузер. В этом случае мы будем весьма благодарны,
-  если вы оставите отзыв касательно данного вопроса.
-tooltip_uninstall_browser: >
-  Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
-  и данные о работе (большинство современных браузеров предлагают такую опцию)
+tooltip:
+  wrong_browser: >
+    Возможно, детектор ошибся, и вы используете другой браузер, или другую версию. В этом случае мы будем весьма благодарны,
+    если вы оставите для нас отзыв.
+  uninstall_browser: >
+    Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
+    и данные о работе (большинство современных браузеров предлагают такую опцию)
 
-browser_market_share: >
-  Предпочитают %marketShare%% пользователей сети
-browser_stable_release: >
-  Текущая версия
-browser_button_download: >
-  Скачать
-browser_button_official_page: >
-  на сайте разработчика
-browser_os: >
-  Для операционных систем
+browser:
+  market_share:
+    Предпочитают %marketShare%% пользователей сети
+  stable_release:
+    Текущая версия
+  button_download:
+    Скачать
+  button_official_page:
+    на сайте разработчика
+  os:
+    Для операционных систем
 
-content_idea_title: >
-  Зачем это нужно?
-content_idea_text: >
-  Несмотря на то, что браузеры научились обновлять себя не отвлекая пользователя от его повседневных дел,
-  многие до сих пор используют устаревшие версии подобных программ. Причин, по которым с вами может произойти подобное,
-  множество, но следствие одно: сайты и системы в сети Интернет для вас будут работать и выглядеть не так,
-  как это было задумано их создателями.
-  Начиная от вопросов безопасности и некорректного внешнего вида и заканчивая удобством использования и
-  производительностью - всегда стоит использовать последнии версии браузеров.
-  На этой странице вы можете проверить вашу и скачать последнюю версию любого из наиболее популярных
-  в данный момент браузеров!
+content_idea:
+  title: >
+    К чему всё это?
+  text: >
+    Несмотря на то, что браузеры научились обновлять себя, не отвлекая при этом пользователя от его повседневных дел,
+    многие до сих пор используют устаревшие версии подобных программ. Это приводит к тому, что для обладателей старых
+    браузеров сайты и системы в сети будут работать и выглядеть не так, как это было задумано их создателями.
+    Начиная от вопросов безопасности и некорректного внешнего вида и заканчивая удобством использования и
+    производительностью - всегда стоит использовать последние версии браузеров.
+  about: >
+    Мы, компания CHEERS! Unlimited, разработали и выпустили данный продукт с целью заботы о своих клиентах
+    и пользователях наших веб-ориентированных систем.
+    Здесь вы можете узнать, не устарел ли ваш браузер, и скачать последнюю версию любого из наиболее популярных
+    в данный момент браузеров!
 
-content_api_title: >
-  Вы можете использовать это для своих сайтов!
-content_api_text: >
-  Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
-  всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
-  проекты такими, какими они должны быть - присоединяйтесь!
-content_api_guide_title: >
-  Вы можете получить данные в удобном для себя формате!
-content_api_guide_html_title: >
-  Готовый HTML-виджет
-content_api_guide_html_text: >
-  С помощью предоставляемого JavaScript вы получите уже готовый, нейтрально стилизованный виджет для встраивания
-  на любую страницу. В случае, если версия браузера вашего пользователя устарела, виджет покажет себя и предложит
-  обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться от обновления, и сообщение больше
-  не будет отображаться повторно.
-content_api_guide_json_title: >
-  Необходимые данные в формате JSON
-content_api_guide_json_text: >
-  Вы можете самостоятельно стилизовать данные, полученные в формате JSON.
+content_api:
+  title: Детектор можно подключить к любому другому сайту!
+  text: >
+    Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
+    всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
+    проекты такими, какими они должны быть - присоединяйтесь!
+  guide:
+    title: Вы можете получить данные в удобном для себя формате
+    html:
+      title: Готовый HTML-виджет
+      text: >
+        С помощью предоставленного %jsLink% и простейшей интеграции вы получите уже готовый, нейтрально стилизованный
+        виджет для встраивания на любую страницу вашего сайта. В случае, если версия браузера посетителя устарела,
+        виджет покажет себя и предложит обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться
+        от обновления, и он больше не увидит виджет при просмотре вашего сайта.
+      step:
+        1: Подключите скрипт в тег <head> на странице, которая должна отображать виджет
+        2: Вставьте зарезервированный блок сразу после открывающего тега <body> на той же странице
+        3: Укажите последним параметром в ссылке нужный вам язык, который поддерживает наш детектор, например
+    json:
+      title: Необходимые данные в формате JSON
+      text: >
+        Вы можете самостоятельно стилизовать данные, полученные в формате JSON через кросс-доменный запрос
+        по адресу https://brasst.com/api/json/{locale}, где {locale} - нужный вам язык перевода для ошибок
+        и предупреждений, который поддерживает наш детектор.
+        Полученный объект будет иметь примерно следующий вид
+    additional: >
+      Если вы испытываете затруднения со встраиванием HTML виджета или кросс-доменным запросом для JSON,
+      пожалуйста, ознакомьтесь с подробным описанием параметров и примерами в нашем репозитории на GitHub
+  github: Примеры использования на GitHub
 
 user_error_is_bot: >
-  Жаль, но определить ваш браузер не удалось, так как скорее всего вы - бот
+  Жаль, но определить ваш браузер не удалось, так как, скорее всего, вы - бот
 user_error_is_mobile: >
-  Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства
+  Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства.
 user_error_not_browser: >
-  Жаль, но определить ваш браузер не удалось, так как скорее всего ваш клиент - не браузер
+  Жаль, но определить ваш браузер не удалось, так как, скорее всего, ваш клиент - не браузер
 
 user_warning_unsupported_browser: >
   Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать о последней версии вашего
   или предложить обновление
 user_warning_unsupported_os: >
-  Браузер, который вы используете, официально не поддерживается вашей операционной системой!
-  Рекомендуем скачать и установить другой браузер
+  Браузер, который вы используете, официально не поддерживается вашей операционной системой. Зачем пользоваться
+  программой, от которой отказались её создатели? Самое время скачать и установить другой браузер!
