--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -1,2 +1,107 @@
 # src/AppBundle/Resources/translations/messages.en.yml
-test: This is a test
+message:
+  standard: >
+    Вы используете браузер %browser% для операционной системы %osFamily%.
+    Версия вашего браузера - %clientVersionShort% (%clientVersion%)
+  standard_extended: >
+    Вы используете браузер %browser% от компании %vendor% для операционной системы %osFamily%.
+    Версия вашего браузера - %clientVersionShort% (%clientVersion%)
+  outdated:
+    title:
+      Плохо!
+    text: >
+      Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
+      Текущая же версия вполне может испортить впечатление от просмотра современных сайтов в сети Интернет
+  uptodate:
+    title:
+      Отлично!
+    text: >
+      На данный момент это новейшая версия браузера
+  explorer: >
+    Ох... Internet Explorer, хотя и является популярным браузером по ряду причин, накладывает на разработчиков сайтов
+    ряд ограничений и очень часто не позволяет пользователям в полной мере оценить их работу.
+    Этого можно и не делать, но в некоторых случаях мы рекомендуем установить другой браузер, который, скорее всего, лучше
+    справится с поставленными задачами и сделает вашу работу и развлечения в сети более комфортными.
+
+tooltip:
+  wrong_browser: >
+    Возможно, Br.Asst. ошибся, и вы используете другой браузер, или другую версию. В этом случае мы будем весьма благодарны,
+    если вы оставите для нас отзыв.
+  uninstall_browser: >
+    Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
+    и данные о работе (большинство современных браузеров предлагают такую опцию)
+
+content_slogan:
+  headline: Только свежие браузеры с Br.Asst.
+  subheadline: >
+    Инструмент проверки и обновления вашего веб-браузера
+
+browser:
+  market_share:
+    Предпочитают %marketShare%% пользователей сети
+  stable_release:
+    Текущая версия
+  button_download:
+    Скачать
+  button_official_page:
+    на сайте разработчика
+  os:
+    Для операционных систем
+
+content_idea:
+  title: >
+    Зачем мне нужен Br.Asst.?
+  text: >
+    Несмотря на то, что браузеры научились обновлять себя не отвлекая людей от дел, многие до сих пор используют
+    устаревшие версии подобных программ. Это приводит к тому, что для обладателей старых браузеров сайты и системы
+    в сети будут работать и выглядеть не так, как это было задумано их создателями. Не стоит портить себе впечатление
+    - лучше всегда использовать последние версии браузеров
+  about: >
+    Мы, веб-агентство CHEERS! Unlimited, разработали Br.Asst. с целью заботы о душевном здоровье наших клиентов
+    и пользователей. Br.Asst. поможет вам узнать, не устарел ли ваш браузер, а также скачать последнюю версию
+    любого из наиболее популярных на сегодняшний день!
+
+content_api:
+  title: Вы можете использовать Br.Asst. на своих сайтах!
+  text: >
+    Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
+    всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
+    проекты такими, какими они должны быть - присоединяйтесь!
+  guide:
+    title: Вы можете получить данные в удобном для себя формате
+    html:
+      title: Готовый HTML-виджет
+      text: >
+        С помощью предоставленного %jsLink% и простейшей интеграции вы получите уже готовый, нейтрально стилизованный
+        виджет для встраивания на любую страницу вашего сайта. В случае, если версия браузера посетителя устарела,
+        виджет покажет себя и предложит обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться
+        от обновления, и он больше не увидит виджет при просмотре вашего сайта.
+      step:
+        1: Подключите скрипт в тег <head> на странице, которая должна отображать виджет
+        2: Вставьте зарезервированный блок сразу после открывающего тега <body> на той же странице
+        3: Укажите последним параметром в ссылке нужный вам язык, который поддерживает наш детектор, например
+    json:
+      title: Необходимые данные в формате JSON
+      text: >
+        Вы можете самостоятельно стилизовать данные, полученные в формате JSON через кросс-доменный запрос
+        по адресу https://brasst.com/api/json/{locale}, где {locale} - нужный вам язык перевода для ошибок
+        и предупреждений, который поддерживает наш детектор.
+        Полученный объект будет иметь примерно следующий вид
+    additional: >
+      Если вы испытываете затруднения со встраиванием HTML виджета или кросс-доменным запросом для JSON,
+      пожалуйста, ознакомьтесь с подробным описанием параметров и примерами в нашем репозитории на GitHub
+  github: Примеры использования на GitHub
+
+user_error_is_bot: >
+  Жаль, но определить ваш браузер не удалось, так как, скорее всего, вы - бот
+user_error_is_mobile: >
+  Жаль, но определить ваш браузер не удалось, так как мы пока не поддерживаем мобильные устройства.
+user_error_not_browser: >
+  Жаль, но определить ваш браузер не удалось, так как, скорее всего, ваш клиент - не браузер
+
+user_warning_unsupported_browser: >
+  Жаль, но мы пока поддерживаем только основные браузеры, и не можем ничего сказать о последней версии вашего
+  или предложить обновление
+user_warning_unsupported_os: >
+  Браузер, который вы используете, официально не поддерживается вашей операционной системой. Зачем пользоваться
+  программой, от которой отказались её создатели? Самое время скачать и установить другой браузер!
