--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -6,11 +6,17 @@ message:
   standard_extended: >
     Вы используете браузер %browser% от компании %vendor% для операционной системы %osFamily%.
     Версия вашего браузера - %clientVersionShort% (%clientVersion%)
-  outdated: >
-    Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
-    Текущая же версия вполне может испортить впечатление от просмотра и использования современных сайтов в сети Интернет
-  uptodate: >
-    На сегодняшний день это новейшая версия браузера. Отлично!
+  outdated:
+    title:
+      О нет!
+    text: >
+      Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
+      Текущая же версия вполне может испортить впечатление от просмотра современных сайтов в сети Интернет
+  uptodate:
+    title:
+      Отлично!
+    text: >
+      На данный момент это новейшая версия браузера
   explorer: >
     Ох... Internet Explorer, хотя и является популярным браузером по ряду причин, накладывает на разработчиков сайтов
     ряд ограничений и очень часто не позволяет пользователям в полной мере оценить их работу.
@@ -19,11 +25,16 @@ message:
 
 tooltip:
   wrong_browser: >
-    Возможно, детектор ошибся, и вы используете другой браузер, или другую версию. В этом случае мы будем весьма благодарны,
+    Возможно, Br.Asst. ошибся, и вы используете другой браузер, или другую версию. В этом случае мы будем весьма благодарны,
     если вы оставите для нас отзыв.
   uninstall_browser: >
     Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
     и данные о работе (большинство современных браузеров предлагают такую опцию)
+
+content_slogan:
+  headline: Только свежие браузеры с Br.Asst.
+  subheadline: >
+    Инструмент проверки и обновления вашего веб-браузера
 
 browser:
   market_share:
@@ -39,21 +50,19 @@ browser:
 
 content_idea:
   title: >
-    К чему всё это?
+    Зачем вам нужен Br.Asst.?
   text: >
-    Несмотря на то, что браузеры научились обновлять себя, не отвлекая при этом пользователя от его повседневных дел,
-    многие до сих пор используют устаревшие версии подобных программ. Это приводит к тому, что для обладателей старых
-    браузеров сайты и системы в сети будут работать и выглядеть не так, как это было задумано их создателями.
-    Начиная от вопросов безопасности и некорректного внешнего вида и заканчивая удобством использования и
-    производительностью - всегда стоит использовать последние версии браузеров.
+    Несмотря на то, что браузеры научились обновлять себя не отвлекая людей от дел, многие до сих пор используют
+    устаревшие версии подобных программ. Это приводит к тому, что для обладателей старых браузеров сайты и системы
+    в сети будут работать и выглядеть не так, как это было задумано их создателями. Не стоит портить себе впечатление
+    - лучше всегда использовать последние версии браузеров
   about: >
-    Мы, компания CHEERS! Unlimited, разработали и выпустили данный продукт с целью заботы о своих клиентах
-    и пользователях наших веб-ориентированных систем.
-    Здесь вы можете узнать, не устарел ли ваш браузер, и скачать последнюю версию любого из наиболее популярных
-    в данный момент браузеров!
+    Мы, веб-агентство CHEERS! Unlimited, разработали Br.Asst. с целью заботы о душевном здоровье наших клиентов
+    и пользователей. Br.Asst. поможет вам узнать, не устарел ли ваш браузер, а также скачать последнюю версию
+    любого из наиболее популярных на сегодняшний день!
 
 content_api:
-  title: Детектор можно подключить к любому другому сайту!
+  title: Вы можете использовать Br.Asst. на своих сайтах!
   text: >
     Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
     всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
@@ -68,15 +77,20 @@ content_api:
         виджет покажет себя и предложит обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться
         от обновления, и он больше не увидит виджет при просмотре вашего сайта.
       step:
-        1: Подключите скрипт в тег <head> на странице, которая должна отображать виджет
-        2: Вставьте зарезервированный блок сразу после открывающего тега <body> на той же странице
-        3: Укажите последним параметром в ссылке нужный вам язык, который поддерживает наш детектор, например
+        1: >
+          Вставьте зарезервированный для вывода блок сразу после открывающего тега <body> на странице,
+          которая должна отображать виджет
+        2: >
+          Подключите файл скрипта и его инициализацию перед закрывающим тегом </body> на той же странице
+        3: >
+          Укажите последним параметром ссылки в инициализации скрипта нужный вам язык,
+          который поддерживает Br.Asst., например
     json:
       title: Необходимые данные в формате JSON
       text: >
         Вы можете самостоятельно стилизовать данные, полученные в формате JSON через кросс-доменный запрос
-        по адресу https://brasst.com/api/json/{locale}, где {locale} - нужный вам язык перевода для ошибок
-        и предупреждений, который поддерживает наш детектор.
+        GET-запрос по адресу https://brasst.com/api/{locale}, где {locale} - нужный вам язык перевода для ошибок
+        и предупреждений, который поддерживает Br.Asst. Также укажите дополнительный GET-параметр 'type=json'.
         Полученный объект будет иметь примерно следующий вид
     additional: >
       Если вы испытываете затруднения со встраиванием HTML виджета или кросс-доменным запросом для JSON,
