--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -8,7 +8,7 @@ message:
     Версия вашего браузера - %clientVersionShort% (%clientVersion%)
   outdated:
     title:
-      Плохо!
+      О нет!
     text: >
       Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
       Текущая же версия вполне может испортить впечатление от просмотра современных сайтов в сети Интернет
@@ -50,16 +50,16 @@ browser:
 
 content_idea:
   title: >
-    Зачем мне нужен Br.Asst.?
+    Зачем вам нужен Br.Asst.?
   text: >
     Несмотря на то, что браузеры научились обновлять себя не отвлекая людей от дел, многие до сих пор используют
     устаревшие версии подобных программ. Это приводит к тому, что для обладателей старых браузеров сайты и системы
     в сети будут работать и выглядеть не так, как это было задумано их создателями. Не стоит портить себе впечатление
     - лучше всегда использовать последние версии браузеров
   about: >
-    Мы, веб-агентство CHEERS! Unlimited, разработали Br.Asst. с целью заботы о душевном здоровье наших клиентов
-    и пользователей. Br.Asst. поможет вам узнать, не устарел ли ваш браузер, а также скачать последнюю версию
-    любого из наиболее популярных на сегодняшний день!
+    Мы, веб-агентство CHEERS! Unlimited, разработали Br.Asst. с целью заботы о наших клиентах и пользователях.
+    Br.Asst. поможет вам узнать, не устарел ли ваш браузер, а также скачать последнюю версию любого из наиболее
+    популярных на сегодняшний день!
 
 content_api:
   title: Вы можете использовать Br.Asst. на своих сайтах!
@@ -77,15 +77,20 @@ content_api:
         виджет покажет себя и предложит обновление. Не бойтесь показаться навязчивым: стоит пользователю отказаться
         от обновления, и он больше не увидит виджет при просмотре вашего сайта.
       step:
-        1: Подключите скрипт в тег <head> на странице, которая должна отображать виджет
-        2: Вставьте зарезервированный блок сразу после открывающего тега <body> на той же странице
-        3: Укажите последним параметром в ссылке нужный вам язык, который поддерживает наш детектор, например
+        1: >
+          Вставьте зарезервированный для вывода блок сразу после открывающего тега <body> на странице,
+          которая должна отображать виджет
+        2: >
+          Подключите файл скрипта и его инициализацию перед закрывающим тегом </body> на той же странице
+        3: >
+          Укажите последним параметром ссылки в инициализации скрипта нужный вам язык,
+          который поддерживает Br.Asst., например
     json:
       title: Необходимые данные в формате JSON
       text: >
         Вы можете самостоятельно стилизовать данные, полученные в формате JSON через кросс-доменный запрос
-        по адресу https://brasst.com/api/json/{locale}, где {locale} - нужный вам язык перевода для ошибок
-        и предупреждений, который поддерживает наш детектор.
+        GET-запрос по адресу https://brasst.com/api/{locale}, где {locale} - нужный вам язык перевода для ошибок
+        и предупреждений, который поддерживает Br.Asst. Также укажите дополнительный GET-параметр 'type=json'.
         Полученный объект будет иметь примерно следующий вид
     additional: >
       Если вы испытываете затруднения со встраиванием HTML виджета или кросс-доменным запросом для JSON,
