--- a/src/AppBundle/Resources/translations/messages.ua.yml
+++ b/src/AppBundle/Resources/translations/messages.ua.yml
@@ -1,72 +1,72 @@
 # src/AppBundle/Resources/translations/messages.ua.yml
 message:
   standard: >
-    Вы используете браузер %browser% для операционной системы %osFamily%.
-    Версия вашего браузера - %clientVersionShort% (%clientVersion%)
+    Ви користуєтесь браузером %browser% для операційної системи %osFamily%.
+    Версія вашого браузеру - %clientVersionShort% (%clientVersion%)
   standard_extended: >
-    Вы используете браузер %browser% от компании %vendor% для операционной системы %osFamily%.
-    Версия вашего браузера - %clientVersionShort% (%clientVersion%)
+    Ви користуєтесь браузером %browser% від компанії %vendor% для операційної системи %osFamily%.
+    Версія вашого браузеру - %clientVersionShort% (%clientVersion%)
   outdated:
     title:
-      О нет!
+      О ні!
     text: >
-      Эта версия устарела, а значит, самое время обновить ее до новейшей %stableVersionShort% (%stableVersion%)!
-      Текущая же версия вполне может испортить впечатление от просмотра современных сайтов в сети Интернет
+      Це версія застаріла, отже, саме час оновити її до нової %stableVersionShort% (%stableVersion%)!
+      Поточна ж версія цілком може зіпсувати враження від перегляду сучасних сайтів в мережі Інтернет
   uptodate:
     title:
-      Отлично!
+      Чудово!
     text: >
-      На данный момент это новейшая версия браузера
+      На даний момент це найбільш нова версія браузеру
   explorer: >
-    Ох... Internet Explorer, хотя и является популярным браузером по ряду причин, накладывает на разработчиков сайтов
-    ряд ограничений и очень часто не позволяет пользователям в полной мере оценить их работу.
-    Этого можно и не делать, но в некоторых случаях мы рекомендуем установить другой браузер, который, скорее всего, лучше
-    справится с поставленными задачами и сделает вашу работу и развлечения в сети более комфортными.
+    Ох... Internet Explorer, хоч і з певних причин є популярним браузером, дуже часто не дозволяє користувачам у повній
+    мірі оцінити роботу розробників сайтів. Цього можна і не робити, але в деяких випадках ми рекомендуємо встановити
+    інший браузер, який, скоріш за все, краще виконає поставлені задачі та зробить вашу роботу та розваги в мережі
+    більш комфортними
 
 tooltip:
   wrong_browser: >
-    Возможно, Br.Asst. ошибся, и вы используете другой браузер, или другую версию. В этом случае мы будем весьма благодарны,
-    если вы оставите для нас отзыв.
+    Можливо, Br.Asst. помилився, і ви насправді користуєтесь іншим браузером, або іншою його версією. В такому разі
+    ми будемо вельми вдячні, якщо ви залишите для нас відгук
   uninstall_browser: >
-    Настоятельно рекомендуем удалить старую версию браузера перед установкой новой, сохранив при этом ваши настройки
-    и данные о работе (большинство современных браузеров предлагают такую опцию)
+    Наполегливо радимо видалити стару версію браузеру перед встановленням нової, зберігши при цьому ваші налаштування
+    й дані про роботу (більшість сучасних браузерів пропонують таку опіцію)
 
 content_slogan:
-  headline: Только свежие браузеры с Br.Asst.
+  headline: Тількі свіжі браузери з Br.Asst.
   subheadline: >
-    Инструмент проверки и обновления вашего веб-браузера
+    Інструмент перевірки та оновлення вашого веб-браузеру
 
 browser:
   market_share:
-    Предпочитают %marketShare%% пользователей сети
+    Віддають перевагу %marketShare%% користувачів мережі
   stable_release:
-    Текущая версия
+    Поточна версія
   button_download:
     Скачать
   button_official_page:
-    на сайте разработчика
+    на сайті розробника
   os:
-    Для операционных систем
+    Для операційних систем
 
 content_idea:
   title: >
-    Зачем вам нужен Br.Asst.?
+    Навіщо вам потрібен Br.Asst.?
   text: >
-    Несмотря на то, что браузеры научились обновлять себя не отвлекая людей от дел, многие до сих пор используют
-    устаревшие версии подобных программ. Это приводит к тому, что для обладателей старых браузеров сайты и системы
-    в сети будут работать и выглядеть не так, как это было задумано их создателями. Не стоит портить себе впечатление
-    - лучше всегда использовать последние версии браузеров
+    Незважаючи на те, що браузери навчились оновлювати себе не відволікаючи людей від справ, багато хто і сьогодні
+    використовує застарілі версії подібних програмЦе призводить до того, що для власників старих браузерів сайти та
+    системи в мережі будуть працювати та виглядати не так, як це було задумано їх творцями. Не варто псувати собі
+    враження - краще завжди використовувати останні версії браузерів!
   about: >
-    Мы, веб-агентство CHEERS! Unlimited, разработали Br.Asst. с целью заботы о душевном здоровье наших клиентов
-    и пользователей. Br.Asst. поможет вам узнать, не устарел ли ваш браузер, а также скачать последнюю версию
-    любого из наиболее популярных на сегодняшний день!
+    Ми, веб-агентство CHEERS! Unlimited, розробили Br.Asst. з метою турботи про наших клієнтів і користувачів.
+    Br.Asst. допоможе вам дізнатися, чи не застарів ваш браузер, а також завантажити останню версію будь-якого з
+    найбільш популярних на сьогодняшній день.
 
 content_api:
-  title: Вы можете использовать Br.Asst. на своих сайтах!
+  title: Ви можете використовувати Br.Asst. на своїх сайтах!
   text: >
-    Мы предоставляем бесплатное и простое API для разработчиков и веб-мастеров. Если вы хотите, чтобы ваши пользователи
-    всегда были в курсе версии своего браузера, имели возможность буквально в 3 клика обновить её и увидеть ваши
-    проекты такими, какими они должны быть - присоединяйтесь!
+    Ми надаємо безкоштовне та просте API для розробників та веб-майстрів. Якщо ви хочете, щоб ваші користувачі завжди
+    були в курсі версії свого браузера, мали можливість буквально у 3 кліка оновити її та побачити ваші проекти
+    такими, якими вони мають бути - приєднуйтесь!
   guide:
     title: Вы можете получить данные в удобном для себя формате
     html:
